cmake_minimum_required(VERSION 2.6)
project(Priority_queue)
find_package(GTest REQUIRED)
include_directories(${GTEST_INCLUDE_DIRS})
add_executable(runTests tests.cpp)
add_compile_options(-Wall -Wextra -pedantic -Werror -std=c++14)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DTESTING")
target_link_libraries(runTests ${GTEST_LIBRARIES} pthread)
